# task-auth-api

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  VERIFICATION.md  docker-compose.yml
.github/workflows/: ci.yml
config/: base.toml  local.example.toml
migrations/: 0002_create_refresh_tokens.sql  0003_create_tasks.sql
src/: app.rs  config.rs  error.rs  health.rs  lib.rs  main.rs  observability.rs  state.rs
src/auth/: dto.rs  extractor.rs  mod.rs  password.rs  service.rs  tokens.rs
src/db/: pool.rs
src/tasks/: dto.rs  mod.rs  repository.rs  service.rs
src/users/: repository.rs
tests/: auth_flow.rs
